kubernetes/api-java/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-java-deployment
  namespace: default
  labels:
    role: api-java
spec:
  replicas: 1
  selector:
    matchLabels:
      role: api-java
  template:
    metadata:
      labels:
        role: api-java
    spec:
      containers:
      - name: api-java
        image: 192.168.0.27/api-java:cicd
        imagePullPolicy: Always
        ports:
        - containerPort: 48080
