kubernetes/api-java/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: api-java-service
spec:
  type: LoadBalancer
  selector:
    role: api-java
  ports:
    - protocol: TCP
      port: 32080
      targetPort: 48080
