kubernetes/api-java/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: api-java-service
  namespace: default
spec:
  type: NodePort
  selector:
    role: api-java
  ports:
    - protocol: TCP
      port: 48080
      targetPort: 48080
      nodePort: 32080
